test/compile-errors/bogus-local.crow
main void() summon
	x = z
	_ = x ? 1 : 2
